--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
   url_launcher: ^6.0.10
+  flutter_local_notifications:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
